--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "lisa",
+  "name": "gittimer",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "dist/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc && electron ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@octokit/rest": "^20.1.0",
-    "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
-    "node-cron": "^3.0.3",
-    "ts-node": "^10.9.2"
+    "electron-log": "^5.1.2",
+    "octokit": "^3.2.0"
+  },
+  "description": "",
+  "devDependencies": {
+    "electron": "^30.0.0",
+    "typescript": "^5.4.5"
   }
 }
